Ensure vertical alignment in instructor groups

--- a/app/budget/directives/budgetCosts/instructorCostsRow/instructorCostsRow.css
+++ b/app/budget/directives/budgetCosts/instructorCostsRow/instructorCostsRow.css
@@ -18,6 +18,7 @@
 .instructor-costs__instructor-container {
 	display: flex;
 	align-items: center;
+	height: 29px;
 }
 
 .instructor-costs__cost-container {
